# Retreavr

./: .gitignore  HYPERSCALE.md  README.md  conftest.py  direct_seed.py  docker-compose.yml  next.config.mjs  package-lock.json  print_routes.py  requirements.txt  seed_master.py  seeder.sql
backend/: .env  .env.example  Dockerfile  alembic.ini  check_counts.py  check_schema.py  check_schema_full.py  check_user.py  get_ids.py  init_db_full.py  list_users.py  print_routes.py  pyproject.toml  requirements.txt  simple_seed.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_missing_indexes.py  003_create_dnc_numbers_table.py  004_add_composite_indexes.py  005_add_agent_knowledge_unique_constraint.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: admin.py  analytics.py  auth.py  (+12 more)
backend/app/core/: config.py  database.py
backend/app/middleware/: rbac.py  tenant.py
backend/app/models/: __init__.py  analytics.py  calls.py  campaigns.py  knowledge.py  leads.py  organization.py  refresh_token.py  system.py  user.py  voice_agents.py
backend/app/schemas/: __init__.py  analytics.py  auth.py  calls.py  campaigns.py  common.py  knowledge.py  leads.py  organizations.py  quotes.py  voice_agents.py
backend/app/services/: audio_codec.py  audit.py  auth.py  campaign_worker.py  insurance_quotes.py  post_call_processor.py  redis.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_auth.py  test_calls.py  test_campaigns.py  test_leads.py  test_organizations.py  test_voice_agents.py  test_websockets.py
(+285 files in other folders)
